--- a/_config.yml
+++ b/_config.yml
@@ -34,37 +34,31 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+facebook: umangsbhatt
+twitter: umangsbhatt
 # google: mygoogle
-# instagram: myinstagram
+# instagram: umangsbhatt
 # pinterest: mypinterest
-# linkedin: mylinkedin
+# linkedin: umangsbhatt
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: umangsbhatt
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+medium: umangsbhatt
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: umang@cmu.com
 
 authors:
     johndoe:
-        name: John Doe
+        name: Umang Bhattt
         bio: A Man who travels the world eating noodles
         external-image: false
         picture: assets/images/profile.jpg
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+        twitter: umangsbhatt
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
