--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Umang Bhatt
-bio: A Man who travels the world eating noodles
+bio: A coffee addict trying to humanize 0s and 1s
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -29,8 +29,8 @@ permalink: /:title/
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
-  shortname: mydisqus # enter this from your disqus account
-  categories: [blog, project] # only show disqus for posts that have these categories
+  shortname: 
+  categories: 
 
 # if you don't have any of social below, comment the line
 facebook: umangsbhatt
@@ -54,7 +54,7 @@ email: umang@cmu.com
 authors:
     umangsbhatt:
         name: Umang Bhattt
-        bio: A Man who travels the world eating noodles
+        bio: A coffee addict trying to humanize 0s and 1s
         external-image: false
         picture: assets/images/profile.jpg
         twitter: umangsbhatt
