--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ post-advance-links: [blog]
 show-author: true
 
 # do you want some animations?
-animation: true
+animation: false
 
 plugins:
   - jekyll-seo-tag
