--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Umang Bhatt
-bio: A coffee addict trying to humanize 0s and 1s
+bio: A coffee enthusiast trying to humanize 0s and 1s
 
 # twitter summary info
 description: A blog about technology and stuff related
